# Bspline

./: .clang-format  CMakeLists.txt
inc/: basis.h  bezier.h  bspline.h  spline.h
shader/: colors.fs  colors.vs  colorsId.fs  colorsId.vs
src/: main.cpp
